[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["Jeremy Nelissen <jeremy@blackcape.io>"]

[tool.poetry.dependencies]
python = "^3.8.3"

[tool.poetry.dev-dependencies]
mkdocs-material = "^5.5.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
